--- a/stylesheets/search-banner.scss
+++ b/stylesheets/search-banner.scss
@@ -4,12 +4,23 @@
 
 .custom-search-banner,
 .custom-search-banner-wrap {
-  background: #f8f8f9;
+  background: transparent;
   margin-block: 0;
-  padding-block: 1rem;
+  padding-block: 0.1rem;
+  margin: -7rem 0 0 calc(100vw / 2.5);
+  max-width: 20vw;
+  padding: 0;
 
   h1,
   p {
     display: none;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .custom-search-banner-wrap {
+    padding: 2.5em 0 3em;
+    margin: 1em auto;
+  }
+}
+
