search bar tweaking

--- a/stylesheets/landing-cards.scss
+++ b/stylesheets/landing-cards.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   flex-flow: row wrap;
   gap: 2rem;
-  padding: 3rem 2rem;
+  padding: 0rem 2rem 3rem 2rem;
 
   .landing-card {
     // todo use variable
